# awesome-index

./: .gitignore  README.md  contributing.md  data.csv  pyproject.toml
.github/workflows/: update.yml
src/: README.md
src/awesome_index/: __init__.py  __main__.py  generate.py
